RESOLVED FIXED241980
Text selection menu keeps dismissing when selecting text in BitBucket (Stash)
https://bugs.webkit.org/show_bug.cgi?id=241980
Summary Text selection menu keeps dismissing when selecting text in BitBucket (Stash)
Richard Robinson
Reported 2022-06-24 12:15:19 PDT
Attachments
Richard Robinson
Comment 1 2022-06-24 12:21:36 PDT
EWS
Comment 2 2022-06-28 12:12:52 PDT
Committed 251919@main (9458033af410): <https://commits.webkit.org/251919@main> Reviewed commits have been landed. Closing PR #1781 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.